--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ backend/__pycache__/settings.cpython-313.pyc
 /accounts/__pycache__
 /backend/__pycache__
 /accounts/migrations/__pycache__
+/backend/__pycache__
+.env
+.env
+.env
